
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {unsigned long s_addr; } ;
struct sockaddr_in {TYPE_2__ sin_addr; } ;
struct TYPE_3__ {int sa_family; } ;
struct ifreq {TYPE_1__ ifr_addr; int ifr_name; } ;
typedef int ifr ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int PF_INET ;
 int SIOCGIFADDR ;
 int SOCK_DGRAM ;
 int close (int) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 scalar_t__ ioctl (int,int ,char*) ;
 int memset (struct ifreq*,int ,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strncpy (int ,char*,int) ;

unsigned long get_int_ipv4 (char *device)
{
        int tmp_fd;
        struct ifreq ifr;
        struct sockaddr_in *sin;

        tmp_fd = socket(PF_INET, SOCK_DGRAM, 0);

        if(tmp_fd < 0) {
                fprintf(stderr, "Error: get_int_ipv4: socket failed.\n");
                exit(EXIT_FAILURE);
        }

        memset(&ifr, 0, sizeof(ifr));
        sin = (struct sockaddr_in *) &ifr.ifr_addr;
        strncpy(ifr.ifr_name, device, sizeof(ifr.ifr_name));

        ifr.ifr_addr.sa_family = AF_INET;

        if(ioctl(tmp_fd, SIOCGIFADDR, (char *) &ifr) < 0) {
                fprintf(stderr, "Error: get_int_ipv4: ioctl failed.\n");
                exit(EXIT_FAILURE);
        }

        close(tmp_fd);
        return(sin->sin_addr.s_addr);
}
