; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4272.c_get_int_ipv4.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4272.c_get_int_ipv4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifreq = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32 }
%struct.sockaddr_in = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@PF_INET = common dso_local global i32 0, align 4
@SOCK_DGRAM = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Error: get_int_ipv4: socket failed.\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@AF_INET = common dso_local global i32 0, align 4
@SIOCGIFADDR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [36 x i8] c"Error: get_int_ipv4: ioctl failed.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_int_ipv4(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ifreq, align 4
  %5 = alloca %struct.sockaddr_in*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i32, i32* @PF_INET, align 4
  %7 = load i32, i32* @SOCK_DGRAM, align 4
  %8 = call i32 @socket(i32 %6, i32 %7, i32 0)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @EXIT_FAILURE, align 4
  %15 = call i32 @exit(i32 %14) #3
  unreachable

16:                                               ; preds = %1
  %17 = call i32 @memset(%struct.ifreq* %4, i32 0, i32 8)
  %18 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %4, i32 0, i32 0
  %19 = bitcast %struct.TYPE_3__* %18 to %struct.sockaddr_in*
  store %struct.sockaddr_in* %19, %struct.sockaddr_in** %5, align 8
  %20 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %4, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 @strncpy(i32 %21, i8* %22, i32 4)
  %24 = load i32, i32* @AF_INET, align 4
  %25 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %4, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* @SIOCGIFADDR, align 4
  %29 = bitcast %struct.ifreq* %4 to i8*
  %30 = call i64 @ioctl(i32 %27, i32 %28, i8* %29)
  %31 = icmp slt i64 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %16
  %33 = load i32, i32* @stderr, align 4
  %34 = call i32 @fprintf(i32 %33, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  %35 = load i32, i32* @EXIT_FAILURE, align 4
  %36 = call i32 @exit(i32 %35) #3
  unreachable

37:                                               ; preds = %16
  %38 = load i32, i32* %3, align 4
  %39 = call i32 @close(i32 %38)
  %40 = load %struct.sockaddr_in*, %struct.sockaddr_in** %5, align 8
  %41 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  ret i64 %43
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(%struct.ifreq*, i32, i32) #1

declare dso_local i32 @strncpy(i32, i8*, i32) #1

declare dso_local i64 @ioctl(i32, i32, i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
